Fix missing details for cloud events (#517)
* Fix missing details for cloud events
 - Setting the base env url in clowdapp
 - Updating event-schemas version
  - Relax validation for description
  - Correctly decode /encode the date-time
  - policy ids are uuids

* Fix tests